> Fixed the home page buttons on mobile view, > Added footer with link to blog post

--- a/assets/css/jumbotron-narrow.css
+++ b/assets/css/jumbotron-narrow.css
@@ -26,9 +26,8 @@ body {
 
 /* Custom page footer*/
 .footer {
-  padding-top: -0px;
+  padding-top: 0px;
   color: #777;
-
 }
 
 /* Customize container */
